# gpt-simple

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: README.md  architecture.md  checkpointing-and-resume.md  configuration.md  data.md  hardware-tuning.md  inference.md  orchestration.md  performance.md  training.md
examples/configs/: pretrain_2.8b_15b.yaml
examples/orchestrators/: README.md  jeanzay.md  jeanzay_batch_generate.sbatch  jeanzay_generate.sbatch  jeanzay_resume_chain.sbatch  kubernetes_job.yaml  local_loop.sh  slurm_resume_chain.sh
scripts/: benchmark_attention.py  check_attention_backend.py  count_tokens.py  diagnose_eos.py  smoke_8xV100.sh
src/gpt_simple/: __init__.py  __main__.py  _checkpoint.py  _logging.py  _run_state.py  _shutdown.py  _streaming.py  _train_loop.py  _train_setup.py  config.py  data.py  errors.py  generate.py  model.py  pretokenize.py  tokenizer.py  train.py  validate.py
src/gpt_simple/cli/: batch_generate_cmd.py  generate_cmd.py  init_cmd.py  main.py  status_cmd.py  stop_cmd.py  tokenize_cmd.py  train_cmd.py  validate_cmd.py
tests/: test_bucket_exhaustion.py  test_checkpoint.py  test_cli.py  test_data_resume.py  test_dataloader_clamp.py  test_distributed_invariants.py  test_e2e_resume.py  test_initialization.py  test_model_arch.py  test_pretokenized.py  test_shutdown.py  test_validate.py
