[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-simple-lm"
version = "0.1.2"
description = "A clean, efficient framework for pretraining language models from scratch"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Louis Bertucci" }]
keywords = ["llm", "pretraining", "gpt", "pytorch", "transformer", "language-model"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0,<2.0",
    "transformers>=4.36.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15.0"]
rich = ["rich>=13.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "wandb>=0.15.0",
    "rich>=13.0",
]

[project.scripts]
gpt-simple = "gpt_simple.cli.main:main"

[project.urls]
Homepage = "https://github.com/lb-off/gpt-simple"
Documentation = "https://lb-off.github.io/gpt-simple/"
Repository = "https://github.com/lb-off/gpt-simple"
Issues = "https://github.com/lb-off/gpt-simple/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Tests prepend the project root to sys.path before importing the package,
# so imports legitimately follow a statement (E402).
"tests/*" = ["E402"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that spawn the gpt-simple CLI as a subprocess (slow, default-included)",
]
